--- a/frontend/src/main/resources/templates/page.html
+++ b/frontend/src/main/resources/templates/page.html
@@ -13,12 +13,12 @@
     <table>
         <tr>
             <th>ToDo</th>
-            <th>Priority</th>
+            <th>Completed</th>
             <th>Done?</th>
         </tr>
         <tr th:each="item : ${items}">
-            <td th:text="${item.todo}"/>
-            <td th:text="${item.priority}"/>
+            <td th:text="${item.content}"/>
+            <td th:text="${item.completed}"/>
             <td>
                 <form method="POST" th:action="@{/delete}">
                     <input type="hidden" name="todo" th:value="${item.todo}" />
@@ -33,7 +33,7 @@
     <table>
         <tr>
             <th>ToDo</th>
-            <th>Priority</th>
+            <th>Completed</th>
             <th>Done?</th>
         </tr>
         <tr>
@@ -49,8 +49,8 @@
     <form method="POST" th:action="@{/create}">
         <label for="newitem">New ToDo Item</label>
         <input type="text" name="newItem" th:value="${newItem}" />
-        <label>Priority</label>
-        <input type="text" name="priority" th:value="${priority}" />
+        <label>Completed</label>
+        <input type="text" name="completed" th:value="${completed}" />
         <input type="submit" value="Add!">
     </form>
 </div>
