--- a/frontend/src/main/resources/templates/page.html
+++ b/frontend/src/main/resources/templates/page.html
@@ -19,7 +19,7 @@
             <td th:text="${item.content}"/>
             <td th:text="${item.completed }"/>
             <td>
-                <form method="POST" th:action="@{/delete}">
+                <form method="DELETE" th:action="@{/delete}">
                     <input type="hidden" name="todo" th:value="${item.content}" />
                     <input type="submit" value="Done!"/>
                 </form>
