--- a/frontend/src/main/resources/templates/page.html
+++ b/frontend/src/main/resources/templates/page.html
@@ -13,13 +13,14 @@
     <table>
         <tr>
             <th>ToDo</th>
-            <th>priority </th>
+            <th>Priority</th>
+            <th>Done?</th>
         </tr>
         <tr th:each="item : ${items}">
             <td th:text="${item.content}"/>
-            <td th:text="${item.priority }"/>
+            <td th:text="${item.priority}"/>
             <td>
-                <form method="DELETE" th:action="@{/delete}">
+                <form method="POST" th:action="@{/delete}">
                     <input type="hidden" name="content" th:value="${item.content}" />
                     <input type="submit" value="Done!"/>
                 </form>
@@ -32,7 +33,7 @@
     <table>
         <tr>
             <th>ToDo</th>
-            <th>priority </th>
+            <th>Priority</th>
             <th>Done?</th>
         </tr>
         <tr>
@@ -48,8 +49,8 @@
     <form method="POST" th:action="@{/create}">
         <label for="newitem">New ToDo Item</label>
         <input type="text" name="newItem" th:value="${newItem}" />
-        <label>priority </label>
-        <input type="text" name="priority " th:value="${priority }" />
+        <label>Priority</label>
+        <input type="text" name="priority" th:value="${priority}" />
         <input type="submit" value="Add!">
     </form>
 </div>
